# tot

./: CMakeLists.txt
github-avatar-proxy/: build-and-install.sh  github.go  go.mod  handler.go  log.go  main.go  memo.go  uninstall.sh
merkle/: CMakeLists.txt  RAEDME.md  merkle.cpp  merkle.h
test/: CMakeLists.txt  merkle_test.cpp  timer_test.cpp
timer/: CMakeLists.txt  timer.h
